--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
