--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
+
 :host ::ng-deep {
     .container {
         margin: 0 15%;
@@ -18,4 +19,8 @@
             }
         }
     }
+}
+
+.container{
+    margin: auto;
 }
