--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import 'https://fonts.googleapis.com/css?family=Montserrat&display=swap';
+@import 'https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap';
+
+.bg{
+    width: 100%;
+    height: 100%;
+    background: url('assets/imgs/fondo@2x.png') no-repeat center;
+    background-position: top center;
+    opacity: 1;
+    background-color: #4801E6;
+
+}
+
+html, body {
+    height: 100%;
+}
