--- a/src/app/components/verify/verify.component.html
+++ b/src/app/components/verify/verify.component.html
@@ -2,8 +2,7 @@
         <div class="content">
             <p>Bienvenido al Sistema Nacional de verificación de Certificados</p>
             <div class="input">
-                <textarea class="md-textarea form-control" placeholder="Ingrese el objeto JSON correspondiente al certificado" id="json_txt" #json_txt>
-                </textarea>
+                <textarea class="md-textarea form-control" placeholder="Ingrese el objeto JSON correspondiente al certificado" id="json_txt" #json_txt></textarea>
                 <div>
                 <button (click)="verify(json_txt.value)" pButton label="Verificar" class="btn btn-success "></button> 
                 </div>
