--- a/src/app/components/verify/dialog.html
+++ b/src/app/components/verify/dialog.html
@@ -1,4 +1,7 @@
-<h1 mat-dialog-title>{{data.title}}</h1>
-<div mat-dialog-content>
+<div mat-dialog-content id="own_dialog" [ngClass]="title">
   <p>{{data.txt}}</p>
+  <img [src]="imgSrc" />
+</div>
+<div mat-dialog-actions class="mat-dialog-actions">
+  <button mat-button class="mat-button" (click)="onNoClick()">Volver</button>
 </div>
