--- a/src/app/components/verify/verify.component.scss
+++ b/src/app/components/verify/verify.component.scss
@@ -29,6 +29,7 @@
     line-height: 1.4;
     font-weight: bold;
     text-align: center;
+    margin-bottom: 28px;
 
 }
 
@@ -39,7 +40,7 @@
 }
 
 .junbo{
-    padding-top: 100px;
+    padding-top: 220px;
     background-color: inherit
 }
 
@@ -61,6 +62,9 @@
     font-family: Montserrat;
     color: #ffffff;
     text-transform: uppercase;
-    letter-spacing: 1.4;
-    font-weight: 500;
+    letter-spacing: 1.4px;
+    font-weight: 600;
+    margin-top: 28px;
+    font-size: larger;
+    padding: 14px;
 }
