--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,13 +6,18 @@
 .bg{
     width: 100%;
     height: 100%;
-    background: url('assets/imgs/fondo@2x.png') no-repeat center;
-    background-position: top center;
+    background: url('assets/imgs/fondo.png') no-repeat;
+    background-size: 100% 100%;
+    // background-position: top center;
     opacity: 1;
-    background-color: #4801E6;
-
+    // background-color: #4801E6;
 }
 
 html, body {
     height: 100%;
+}
+
+.mat-dialog-container {
+    background-color: #0000fc !important;
+    box-shadow: 0px 0px 50px rgba($color: #000000, $alpha: 0.5);
 }
